--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body style="margin: 0px;">
 
 <div class="img-body">
-	<img src="./index_files/home3.jpg">
+	<img src="home4.jpg">
  </div>
 
 </body></html>
